# 6502_CPP

./: .gitignore  CMakeLists.txt  README.md  README_BUILD.md  README_BUILD.txt  build.pl
AutisticAssembler/: CMakeLists.txt  DESIGN.txt  temp
AutisticAssembler/inc/: analyzer.h  asm.h  defines.hpp  parser.h  token.hpp  tokenizer.h
AutisticAssembler/src/: CMakeLists.txt  analyzer.cpp  asm.cpp  main.cpp  parser.cpp  tokenizer.cpp
AutisticAssembler/test/: CMakeLists.txt  test.hpp  test_OPCodes.cpp  test_adressing.cpp  test_fromTheBeggining.cpp  test_parser.cpp  test_readingFile.cpp  test_through.cpp  test_tokenizerStuff.cpp  test_vPC.cpp  test_whole.cpp
ProcessorModel/: CMakeLists.txt
ProcessorModel/inc/: CPU.h  instructionDefinitions.h  memory.h
ProcessorModel/src/: CMakeLists.txt  CPU.cpp  CPU_Helper.cpp  CPU_Instructions.cpp  main.cpp  memory.cpp
ProcessorModel/src/Instructions/: Branches.cpp  Load_store.cpp  Register_transfers.cpp  Status_flags.cpp  System_functions.cpp
ProcessorModel/test/: CMakeLists.txt  README.txt  main.cpp  test_DEC.cpp  test_JumpingInstructions.cpp  test_LDY.cpp  test_MISC.cpp  test_MultipleInstructions.cpp  test_branches.cpp  test_circularTestCollection.cpp  test_compare.cpp  test_fileLoading.cpp  test_logicalOperations.cpp  test_loop.cpp  test_shifts.cpp  test_stackOperations.cpp  test_transfer.cpp
build_old/: CMakeCache.txt  LDA_generated  Makefile  cmake_install.cmake  compile_commands.json  convoluted  dupa  dupa_generated  testFile_generated
build_old/ProcessorModel/: Makefile
build_old/ProcessorModel/src/: dupa
build_old/ProcessorModel/test/: Makefile  cmake_install.cmake  test
build_old/src/: Makefile  cmake_install.cmake  dupa
build_old/test/: Makefile  cmake_install.cmake  test
build_temp/: CMakeCache.txt  LDXY_NPC  LDXY_PC  Makefile  cmake_install.cmake  compile_commands.json  convoluted
build_temp/AutisticAssembler/: Makefile  cmake_install.cmake
build_temp/AutisticAssembler/src/: AutisticAssembler  Makefile  cmake_install.cmake
build_temp/AutisticAssembler/test/: Makefile  cmake_install.cmake  test_asm
build_temp/ProcessorModel/: cmake_install.cmake
build_temp/ProcessorModel/src/: Makefile  cmake_install.cmake  dupa
build_temp/ProcessorModel/test/: LDA  test
common/inc/: defines.h  instructionCodes.h  instructionCodes_experimental_dontTouchMe.hpp
inc/: CPU.h  defines.h  instructionCodes.h  instructionDefinitions.h  instructionDefinitions_test.h  memory.h
src/: CMakeLists.txt  CPU.cpp  CPU.h  CPU_Helper.cpp  CPU_Instructions.cpp  main.cpp  memory.cpp
src/Instructions/: Arithmetics.cpp  Branches.cpp  Increment_decrement.cpp  Jumps_calls.cpp  Load_store.cpp  Logical.cpp  Register_transfers.cpp  Shifts.cpp  Stack_operations.cpp  Status_flags.cpp  System_functions.cpp
test/: CMakeLists.txt  alternative_solution.cpp  test.cpp  test.hpp  test_DEC.cpp  test_INC.cpp  test_JumpingInstructions.cpp  test_LDA.cpp  test_LDX.cpp  test_LDY.cpp  test_MultipleInstructions.cpp  test_STA.cpp  test_arithmetics.cpp  test_branches.cpp  test_circularTestCollection.cpp  test_compare.cpp  test_logicalOperations.cpp  test_loop.cpp  test_shifts.cpp  test_stackOperations.cpp  test_statusFlags.cpp  test_systemInstructions.cpp  test_transfer.cpp
